--- a/templates/contact.html
+++ b/templates/contact.html
@@ -68,8 +68,8 @@
     © <script>document.write(new Date().getFullYear())</script> AS Tours International  
     <br>
     Follow us on Instagram:
-    <a href="https://instagram.com/solo2_ceo" class="text-blue-400 hover:text-blue-200" target="_blank">
-      @solo2_ceo
+    <a href="https://instagram.com/astoursinternational" class="text-blue-400 hover:text-blue-200" target="_blank">
+      @astoursinternational
     </a>
   </footer>
 
