--- a/templates/Travel/b2b/Visa/clientvisaquotations.html
+++ b/templates/Travel/b2b/Visa/clientvisaquotations.html
@@ -193,14 +193,14 @@
         <br>
         <a href="#home" class="block text-slate-800 hover:underline text-base font-medium">Home</a>
         <a href="/templates/Blog.html" class="block text-slate-800 hover:underline text-base font-medium">News</a>
-        <!-- <a href="../packages/packages.html" class="block text-slate-800 hover:underline text-base font-medium">Packages</a> -->
+        <a href="../../../../visa/globalvisa.html" class="hover:underline">Global_Visa</a>
         <a href="/visa/visaservices.html" class="block text-slate-800 hover:underline text-base font-medium">Visa Services</a>
-        <a href="templates/Travel/About.html" class="block text-slate-800 hover:underline text-base font-medium">Why Choose Us</a>
+        <a href="../../../Travel/About.html" class="hover:underline">Why Choose Us</a>
         <a href="/templates/Travel/Customerreview.html" class="block text-slate-800 hover:underline text-base font-medium">Testimonials</a>
-        <a href="#contact" class="block text-slate-800 hover:underline text-base font-medium">Contact</a>
+        <a href="../../../contact.html" class="hover:underline">Contact</a>
         
         <!-- Partner Button -->
-        <a href="templates/Travel/b2b/Visa/b2b.html" 
+        <a href="../b2b.html" 
         class="mt-3 inline-flex items-center justify-center gap-2 px-4 py-2 rounded-full text-sm font-semibold border border-transparent btn-gold hover:shadow-lg transition">
         Partner with Us
         </a>
