--- a/visa/visaassistance.css
+++ b/visa/visaassistance.css
@@ -1,4 +1,4 @@
-body {
+/* body {
   font-family: 'Segoe UI', sans-serif;
   background: #f4f4f4;
   margin: 0;
@@ -51,4 +51,4 @@ select {
   padding: 10px;
   margin-bottom: 5px;
   border-radius: 5px;
-}
+} */
