--- a/templates/Blog.html
+++ b/templates/Blog.html
@@ -146,9 +146,9 @@
                     <a href="../index.html" class="hover:text-[--gold] transition-colors">Home</a>
                     <a href="../visa/globalvisa.html" class="hover:text-[--gold] transition-colors">Global Visa</a>
                     <a href="../packages/packages.html" class="hover:text-[--gold] transition-colors">Packages</a>
-                    <a href="../visa/visaservices.html" class="hover:text-[--gold] transition-colors">Visa Services</a>
-                    <a href="#" class="text-[--gold] font-bold border-b-2 border-[--gold]">Blog</a>
-                    <a href="../b2b/Visa/b2b.html" class="ml-4 px-6 py-2.5 rounded-full btn-gold shadow-md">Partner with Us</a>
+                    <!-- <a href="../visa/visaservices.html" class="hover:text-[--gold] transition-colors">Visa Services</a> -->
+                    <a href="#" class="text-[--gold] font-bold border-b-2 border-[--gold]">News</a>
+                    <a href="../templates/Travel/b2b/Visa/b2b.html" class="ml-4 px-6 py-2.5 rounded-full btn-gold shadow-md">Partner with Us</a>
                 </nav>
 
                 <div class="lg:hidden ml-auto">
@@ -165,9 +165,9 @@
                 <div class="h-8"></div> <a href="../index.html" class="hover:text-[--gold]">Home</a>
                 <a href="../visa/globalvisa.html" class="hover:text-[--gold]">Global Visa</a>
                 <a href="../packages/packages.html" class="hover:text-[--gold]">Packages</a>
-                <a href="../visa/visaservices.html" class="hover:text-[--gold]">Visa Services</a>
-                <a href="#" class="text-[--gold] font-bold">Blog</a>
-                <a href="../b2b/Visa/b2b.html" class="mt-2 px-4 py-3 rounded-lg btn-gold text-center">Partner with Us</a>
+                <!-- <a href="../visa/visaservices.html" class="hover:text-[--gold]">Visa Services</a> -->
+                <a href="#" class="text-[--gold] font-bold">News</a>
+                <a href="../templates/Travel/b2b/Visa/b2b.html" class="mt-2 px-4 py-3 rounded-lg btn-gold text-center">Partner with Us</a>
             </div>
         </div>
     </header>
